Fix navbar overflow and alignment issues on smaller screens

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -81,10 +81,10 @@ body > * {
 
 .nav-container {
   max-width: 1400px;
-  height: 64px;
+  height: fit-content;
   width: 100%;
   margin: 0 auto;
-  padding: 0;
+  padding: 0 1rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -123,7 +123,7 @@ body > * {
   margin: 0;
   padding: 0;
   flex: 1;
-  justify-content: end;
+  justify-content: center;
   flex-wrap: nowrap;
 }
 
